@@ -18,8 +18,11 @@
 package org.apache.avro.reflect;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import org.apache.avro.AvroRuntimeException;
 import org.apache.avro.Schema;
@@ -139,13 +142,19 @@ public class ReflectDatumWriter<T> extends SpecificDatumWriter<T> {
     else if (datum instanceof Short)
       datum = ((Short)datum).intValue();
     else if (datum instanceof Character)
-        datum = (int)(char)(Character)datum;
+      datum = (int)(char)(Character)datum;
     else if (datum instanceof Map && ReflectData.isNonStringMapSchema(schema)) {
-        // Maps with non-string keys are written as arrays.
-        // Schema for such maps is already changed. Here we
-        // just switch the map to a similar form too.
-        datum = ((Map)datum).entrySet();
+      // Maps with non-string keys are written as arrays.
+      // Schema for such maps is already changed. Here we
+      // just switch the map to a similar form too.
+      Set entries = ((Map)datum).entrySet();
+      List<Map.Entry> entryList = new ArrayList<Map.Entry>(entries.size());
+      for (Object obj: ((Map)datum).entrySet()) {
+          Map.Entry e = (Map.Entry)obj;
+          entryList.add(new MapEntry(e.getKey(), e.getValue()));
       }
+      datum = entryList;
+    }
     try {
       super.write(schema, datum, out);
     } catch (NullPointerException e) {            // improve error message
